# susbot-backend

./: Cargo.toml  README.md  dfx.json  package.json
src/susbot_backend/: Cargo.toml  susbot_backend.did
src/susbot_backend/src/: analysis.rs  lib.rs  scoring_rules.txt  structs.rs
src/susbot_backend/tests/: integration_tests.rs  vulnerability_tests.rs
