[package]
name = "susbot_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "susbot_backend"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.18.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
num-bigint = "0.4.6"
regex = "1.11.1"

[dev-dependencies]
pocket-ic = "9.0.2"