[package]
name = "susbot_backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "susbot_backend"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.18.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
regex = "1.11.1"

[dev-dependencies]
pocket-ic = "9.0.2"

# Test configuration
[[test]]
name = "integration_tests"
harness = true

[[test]]
name = "vulnerability_tests"
harness = true

[profile.test]
opt-level = 2

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
